--- a/notes-for-story-1.html
+++ b/notes-for-story-1.html
@@ -22,7 +22,7 @@
             <div class=container-fluid>
                 <hr class="hr hr-blurry text-dark mb-4">
                 <h1> Buttons </h1>
-                <button type="button" class="btn btn-primary btn-lg" style="background-color:#00177d"> Primary Button </button>&nbsp;&nbsp; <button type="button" class="btn btn-primary    btn-lg" style="background-color:#800000"> Secondary Button </button>
+                <button type="button" class="btn btn-primary btn-lg" id="primary-button" style="background-color:#00177d"> Primary Button </button>&nbsp;&nbsp; <button type="button" class="btn btn-primary    btn-lg" style="background-color:#800000"> Secondary Button </button>
             </div>
             <hr class="hr hr-blurry text-dark mb-4">
             <div>
@@ -71,7 +71,7 @@
                             </div>
                             <div class="col-md-6 mb-4 mb-md-0">
                                 <h3 class="fw-bold">That's the news!</h3>
-                                <div class="mb-2 text-danger small">
+                                <div class="mb-2 text-warning small">
                                     <i class="fas fa-globe-americas me-2"></i>Travels
                                 </div>
                                 <p class="text-muted"> Ut pretium ultricies dignissim. Sed sit amet mi eget urna placerat vulputate. Ut vulputate est non quam dignissim elementum. Donec a ullamcorper diam. </p>
@@ -106,7 +106,7 @@
                             </div>
                             <div class="col-md-6 mb-4 mb-md-0">
                                 <h3 class="fw-bold">Stock market boom</h3>
-                                <div class="mb-2 text-warning small">
+                                <div class="mb-2 text-dark small">
                                     <i class="fas fa-money-bill me-2"></i>Business
                                 </div>
                                 <p class="text-muted"> Sed sollicitudin purus sed nulla dignissim ullamcorper. Aenean tincidunt vulputate libero, nec imperdiet sapien pulvinar id. Nullam scelerisque odio vel lacus faucibus, tincidunt feugiat augue ornare. Proin ac dui vel lectus eleifend vestibulum et lobortis risus. Nullam in commodo sapien. Curabitur ut erat congue sem finibus eleifend egestas eu metus. Sed ut dolor id magna rutrum ultrices ut eget libero. Duis vel porttitor odio. Ut pulvinar sed turpis ornare tincidunt. Donec luctus, mi euismod dignissim malesuada, lacus lorem commodo leo, tristique blandit ante mi id metus. Integer et vehicula leo, vitae interdum lectus. Praesent nulla purus, commodo at euismod nec, blandit ultrices erat. Aliquam eros ipsum, interdum et mattis vitae, faucibus vitae justo. Nulla condimentum hendrerit leo, in feugiat ipsum condimentum ac. Maecenas sed blandit dolor. </p>
